--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,10 @@
   "dependencies": {
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
-    "dotenv": "^16.3.1",
     "helmet": "^7.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
@@ -28,10 +26,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "react-router-dom": "^6.20.1",
     "vite": "^5.0.0"
-  },
-  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
-  "main": "vite.config.js",
-  "author": "",
-  "license": "ISC"
+  }
 }
